--- a/main/templates/base/navbar.html
+++ b/main/templates/base/navbar.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
 
-      <a class="navbar-brand logo fs-4" href="#">MY TRAVEL COMPANYG</a>
+      <a class="navbar-brand logo fs-4" href="#">MY TRAVEL COMPANY</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
