--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -1,9 +1,9 @@
-{% extends "../base/base.html" %}
+{% extends "./base/base.html" %}
 {% block title %} Home {% endblock %}
 
 {% block template %}
 
-{% include "../base/navbar.html" %}
+{% include "./base/navbar.html" %}
 {% include "./components/splash.html" %}
 
 <div class="container pt-5">
