Templates and Models updated

--- a/main/templates/components/destination-list-elements.html
+++ b/main/templates/components/destination-list-elements.html
@@ -9,7 +9,7 @@
         <div class="row">
             <div class="col-8">
                 <div class="card-body p-0">
-                    <div class="d-flex pb-2 text-body infscroll-author"> {{destination.country}} </div>
+                    <div class="d-flex pb-2 text-body infscroll-city-country"> {{destination.country}} </div>
                     <h1 class="mb-1 text-body fw-bold infscroll-title">{{destination.description|truncatechars:100}}</h1>
                     <h2 class="text-muted fs-6 d-none d-sm-block">{{destination.city}}</h2>
                     <div class="text-muted infscroll-date">{{destination.updated_at | date:"M d, Y"}}</div>
