--- a/main/templates/base/navbar.html
+++ b/main/templates/base/navbar.html
@@ -1,3 +1,10 @@
+<style>
+  .nav-item a {
+    color: whitesmoke;
+    text-decoration: none;
+}
+</style>
+
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
 
@@ -8,7 +15,12 @@
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-         
+          <li class="nav-item px-3 fw-700">
+            <a  href="{% url 'homepage' %}">TOURS</a>
+          </li>
+          <li class="nav-item px-3 fw-700">
+            <a  href="{% url 'destinationpage' %}">DESTINATIONS</a>
+          </li>
         </ul>
         <form class="d-flex">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
