Added destinations to models and views

--- a/main/templates/destination.html
+++ b/main/templates/destination.html
@@ -1,9 +1,9 @@
-{% extends "../base/base.html" %}
+{% extends "./base/base.html" %}
 {% block title %} Destination {% endblock %}
 
 {% block template %}
 
-{% include "../base/navbar.html" %}
+{% include "./base/navbar.html" %}
 
 
 <div class="container pt-5">
