--- a/main/templates/components/footer.html
+++ b/main/templates/components/footer.html
@@ -9,7 +9,7 @@
     }
 </style>
 
-<footer>
+<footer class="footer fixed-bottom">
     <ul class="nav fw-500 fs-12 footer p-5">
         <li class="nav-item">
             <a class="nav-link" href="">Help</a>
