Forms starter code added

--- a/travelwebsite/templates/base/3-col-template.html
+++ b/travelwebsite/templates/base/3-col-template.html
@@ -1,7 +1,7 @@
 {% extends "./base.html" %}
 
 {% block template %}
-
+{% include "base/navbar.html" %}
 <style>
     @media only screen and (min-width: 992px) {
         .col-navbar {
