--- a/travelwebsite/templates/single-tour.html
+++ b/travelwebsite/templates/single-tour.html
@@ -1,7 +1,8 @@
 {% extends "base/3-col-template.html" %}
 
+
 {% block content-left %}
-    {% include "base/navbar.html" %}
+    {% include "base/side-navbar.html" %}
 {% endblock %}
 
 {% block content-mid %}
