--- a/travelwebsite/templates/usermanagement/register.html
+++ b/travelwebsite/templates/usermanagement/register.html
@@ -1,13 +1,14 @@
+{% extends "../base/base.html" %}
+
 {% load static %}
 
 {% load crispy_forms_tags %}
 
-{% extends "./base/base.html" %}
 {% block title %} REGISTRATION {% endblock %}
 
 {% block template %}
 
-{% include "./base/navbar.html" %}
+{% include "../base/navbar.html" %}
 
     <br>
 
@@ -31,7 +32,7 @@
 
      </form>
 
-     <p>Already have an account? <br> <a href="{% url 'my-login' %}">Login to your account</a></p>
+     <p>Already have an account? <br> <a href="">Login to your account</a></p>
     </div>
 
     <br>
