Connected login page with Register and vice-versa.

--- a/travelwebsite/templates/base/navbar.html
+++ b/travelwebsite/templates/base/navbar.html
@@ -21,6 +21,9 @@
           <li class="nav-item px-3 fw-700">
             <a  href="{% url 'destinationpage' %}">DESTINATIONS</a>
           </li>
+          <li class="nav-item px-3 fw-700">
+            <a  href="{% url 'login' %}">Login</a>
+          </li>
         </ul>
         <form class="d-flex">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
