--- a/travelwebsite/templates/usermanagement/register.html
+++ b/travelwebsite/templates/usermanagement/register.html
@@ -32,7 +32,7 @@
 
      </form>
 
-     <p>Already have an account? <br> <a href="">Login to your account</a></p>
+     <p>Already have an account? <br> <a href="{% url 'login' %}">Login to your account</a></p>
     </div>
 
     <br>
