Added Todos, Added tags code

--- a/travelwebsite/templates/components/footer.html
+++ b/travelwebsite/templates/components/footer.html
@@ -18,16 +18,10 @@
             <a class="nav-link" href="">Status</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="">Writers</a>
+            <a class="nav-link" href="">Destinations</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="">Blog</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="">Careers</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="">Privacy</a>
+            <a class="nav-link" href="">Tours</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="">Contact</a>
