--- a/travelwebsite/templates/usermanagement/login.html
+++ b/travelwebsite/templates/usermanagement/login.html
@@ -24,7 +24,7 @@
         <br>
         {{ form.password|as_crispy_field }}
         <br>
-        <input class="btn btn-success w-10" type="submit" value="Create Account" />
+        <input class="btn btn-success w-10" type="submit" value="Login" />
 
      </form>
      <p>Already have an account? <br> <a href="{% url 'register' %}">Login to your account</a></p>
