--- a/travelwebsite/templates/base/navbar.html
+++ b/travelwebsite/templates/base/navbar.html
@@ -19,7 +19,7 @@
             <a  href="{% url 'homepage' %}">TOURS</a>
           </li>
           <li class="nav-item px-3 fw-700">
-            <a  href="{% url 'destinationpage' %}">DESTINATIONS</a>
+            <a  href="{% url 'destination-page' %}">DESTINATIONS</a>
           </li>
           <li class="nav-item px-3 fw-700">
             <a  href="{% url 'login' %}">Login</a>
