Refactored Template HTML

--- a/travelwebsite/templates/tags.html
+++ b/travelwebsite/templates/tags.html
@@ -1,7 +1,7 @@
 {% extends "base/3-col-template.html" %}
 
 {% block content-left %}
-    {% include "base/secondary-navbar.html" %}
+    {% include "base/navbar.html" %}
 {% endblock %}
 
 {% block content-mid %}
