Tags and Bookings Code Updated.

--- a/travelwebsite/templates/base/navbar.html
+++ b/travelwebsite/templates/base/navbar.html
@@ -22,7 +22,10 @@
             <a  href="{% url 'destination-page' %}">DESTINATIONS</a>
           </li>
           <li class="nav-item px-3 fw-700">
-            <a  href="{% url 'login' %}">Login</a>
+            <a  href="{% url 'login' %}">LOGIN</a>
+          </li>
+          <li class="nav-item px-3 fw-700">
+            <a  href="{% url 'booking' %}">BOOK A TOUR</a>
           </li>
         </ul>
         <form class="d-flex">
