--- a/travelwebsite/templates/destination.html
+++ b/travelwebsite/templates/destination.html
@@ -15,7 +15,7 @@
         </div>
         <div class="d-none d-lg-block col-4">
 
-            Here is where some Destination tags will go later!!
+          {% sidebar_tag_cloud %}
 
           {% include 'base/footer.html' %}
         </div>
